# Cine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  copy_functions.cmake  set_undefined.cmake
Cine Editor/: CMakeLists.txt  imgui.ini
Cine Editor/Assets/Plugin/: CMakeLists.txt  ImguiElement.hpp  all_in_one.py  all_in_one_debug.py  all_in_one_release.py  copywriter.py  creator.py  generator.py  input.cpp  input.hpp  obtain_tools_paths.py  plugin.cpp  plugin.hpp  scripts_pch.cpp  scripts_pch.hpp
Cine Editor/Assets/Plugin/include/: Base.hpp
Cine Editor/Assets/Scenes/: Controlls.cine  Cube.cine  Physics.cine  PhysicsController.cine  SerializationTest.cine  Test.cine  Trigger.cine
Cine Editor/Assets/Scripts/: Biba.hpp  Boba.hpp  BodySpawnerScript.hpp  ColorScript.hpp  ContinuosMovemetScript.hpp  ControllerScript.hpp  GameMenu.hpp  MoverScript.hpp  PController2D.hpp  PlayerController.hpp  RandomMover.hpp  RotatorScript.hpp  SelfDestructionScript.hpp  Snake.hpp  SnakeBodySegment.hpp  SnakeController.hpp  TestScript.hpp
Cine Editor/Assets/Textures/: Woman_Sheet.shmeta
Cine Editor/CineEditor/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.hpp
Cine Editor/CineEditor/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  Dialog.hpp  EditorSettingsPanel.cpp  EditorSettingsPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Cine Editor/CineEditor/Utils/: Shell.cpp  Shell.hpp
Cine Editor/Resources/Shaders/: Renderer2D_Quad.glsl
Project Scripts/: SheetCoordGenerator.py
Scriping/: CMakeLists.txt  CMakePresets.json  generator.py  plugin.cpp  plugin.hpp
Scriping/Scripts/: ColorScript.hpp  ControllerScript.hpp  TestScript.hpp  TestScript1.hpp  TestScript2.hpp
examples/: CMakeLists.txt  example1.cpp  example2.cpp  examples_pch.cpp  examples_pch.hpp  glash_example.cpp  imgui_example.cpp  test_window.hpp
examples/resources/shaders/: pink.shader  shader.shader  shader_with_texture.shader  tutorial.shader
examples/shaders/: fragment.frag  pink.shader  shader.shader  vertex.vert
game/: CMakeLists.txt
game/src/: Game.cpp  GameLayer.hpp
sandbox/: CMakeLists.txt  ImguiWindow.cpp  ImguiWindow.hpp  Sandbox.cpp  Sandbox.hpp  Sandbox2D.cpp  Sandbox2D.hpp  Sandbox2DApp.cpp  Sandbox2DApp.hpp  Test.hpp  TestClearColor.cpp  TestClearColor.hpp  TestMenu.cpp  TestMenu.hpp  TestTexture.cpp  TestTexture.hpp
sandbox/Scripts/: ColorScript.cpp  ColorScript.hpp  ControllerScript.hpp
sandbox/resources/shaders/: Renderer2D_Quad.glsl  Renderer2D_Quad_Texture.glsl  shader.glsl  shader.shader  uniform.glsl  uniform_color.glsl  uniform_color.shader
sandbox/resources/textures/: MouseCodes.hpp
src/: CMakeLists.txt  glash_pch.hpp
src/glash/: Application.cpp  Application.hpp  Applicatoin.hpp  Cine.hpp  Core.hpp  EntryPoint.hpp  Enums.hpp  Glash.hpp  ImguiWindow.cpp  ImguiWindow.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Logger.hpp  Mesh_Rectangle.hpp  Mesh_Triangle.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexBuffer_OLD.hpp  Window.cpp  Window.hpp  Window_OLD.cpp  Window_OLD.hpp  (+15 more)
src/glash/Animation/: SpriteAnimation.hpp
src/glash/Core/: Application.cpp  Application.hpp  Base.hpp  CameraController.cpp  CameraController.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  Timer.hpp  Timestep.hpp  UUID.cpp  UUID.hpp  Window.hpp
src/glash/Debug/: Instrumentor.hpp
src/glash/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/glash/Math/: Math.cpp  Math.hpp
src/glash/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFrameBufer.hpp  OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
src/glash/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.hpp
src/glash/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  EditorCamera.cpp  EditorCamera.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GrahpicsContext.hpp  OrthoGraphicCamera.cpp  OrthoGraphicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteAnimation2D.hpp  SubTexture2D.cpp  SubTexture2D.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
src/glash/Scene/: AssetManager.cpp  AssetManager.hpp  ComponentSerializer.hpp  Components.cpp  Components.hpp  Entity.cpp  Entity.hpp  NativeScript.hpp  Registry.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptableEntity.hpp  Systems.cpp  Systems.hpp
src/glash/Utils/: PlatformUtils.hpp  StringUtils.hpp
src/glash/events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/glash/helper/: file_reader.hpp  logger.hpp
src/glash/platform/: Platforms.hpp
src/glash/platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h
src/glash/platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.hpp
src/glash/utils/: file_reader.hpp
tests/: CMakeLists.txt  Entry.cpp  Test.hpp  TestClearColor.cpp  TestClearColor.hpp  TestMenu.cpp  TestTexture.hpp  main.cpp  test_glash.cpp  test_main.cpp
